# biobloom

./: .autotools  .gitmodules  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  azure-pipelines.yml  configure.ac  configure~
.devcontainer/: Dockerfile
BioBloomCategorizer/: BioBloomCategorizer.cpp  BioBloomClassifier.cpp  BioBloomClassifier.h  BioBloomMICategorizer.cpp  BloomMapClassifier.cpp  BloomMapClassifier.h  MIBFClassifier.hpp  Makefile.am  MultiFilter.cpp  MultiFilter.h  Options.cpp  Options.h  ResultsManager.cpp  ResultsManager.h  ResultsManager.hpp
BioBloomMaker/: BioBloomMIMaker.cpp  BioBloomMaker.cpp  BloomFilterGenerator.cpp  BloomFilterGenerator.h  BloomMapGenerator.cpp  BloomMapGenerator.h  MIBFGen.hpp  Makefile.am  Options.cpp  Options.h  SimMat.h  SpacedSeedIndex.h  WindowedFileParser.cpp  WindowedFileParser.h  newick.cc  newick.hh  newick_file.cc  newick_file.hh  tree.cc  tree.hh
BioBloomRecruit/: BioBloomRecruit.cpp  MIBloomTag.cpp  MIBloomTag.h  MIRecurit.cpp  MIRecurit.h  MakeFile.am  Makefile.am
Common/: BloomFilter.cpp  BloomFilter.h  BloomFilterInfo.cpp  BloomFilterInfo.h  Dynamicofstream.cpp  Dynamicofstream.h  HashManager.cpp  HashManager.h  Makefile.am  MurmurHash3.cpp  Options.cpp  Options.h  ReadsProcessor.cpp  ReadsProcessor.h  SDust.hpp  SeqEval.cpp  SeqEval.h  Sequence.cpp  Uncompress.cpp  city.cc  kalloc.h  kseq_util.h  sdust.c  sdust.h  sntHashIterator.hpp
DataLayer/: FastaReader.cpp  FastaReader.h  FastaWriter.cpp  Makefile  Makefile.am  Makefile.in  abyss-fac
Doc/: MultiIndex.md
Scripts/: ParseMultiMatches.pl
Tests/: BloomFilterCategorizerTests.cpp  BloomFilterInfoTests.cpp  BloomFilterMakerTests.cpp  BloomFilterTests.cpp  BloomMapGeneratorTests.cpp  Makefile.am  ReadProcessorTests.cpp  SeqEvalTests.cpp  WindowedParserTests.cpp  ntHashTests.cpp
Tests/.deps/: BloomFilterInfoTests.Po  BloomFilterMakerTests-BloomFilterMakerTests.Po  BloomFilterTests.Po  ReadProcessorTests.Po  WindowedParser-WindowedParserTests.Po
Tests/SeqEvalMethods/: Intended_SeqEval.h  SimpleIncrement_SeqEval.h  evalCompare.pl
Tests/SystemTests/: systemTest.pl
bloomfilter/: BloomFilter.hpp  BloomFilterN.hpp  BloomMap.hpp  BloomMapBitVec.hpp  BloomMapSS.hpp  BloomMapSSBitVec.hpp  MIBFQuerySupport.hpp  MIBloomFilter.hpp  Makefile.am  RollingHash.h  RollingHashIterator.h  ntHashIterator.hpp  rolling.h
tools/: configure.commit
util/: CountHitsMisses.py  KrakenCompare.py  designSS.py  genRV.sh  script.py
