SUBDIRS = \
	Common \
	BioBloomMaker \
	BioBloomCategorizer \
	Tests

dist_doc_DATA = \
	README.md
	
EXTRA_DIST = autogen.sh \
	btl_bloomfilter/BloomFilter.hpp \
	btl_bloomfilter/MIBloomFilter.hpp \
	btl_bloomfilter/MIBFQuerySupport.hpp \
	btl_bloomfilter/stHashIterator.hpp \
	btl_bloomfilter/nthash.hpp \
	btl_bloomfilter/ntHashIterator.hpp