noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	BloomFilterInfo.cpp BloomFilterInfo.h \
	city.cc city.h citycrc.h \
	Dynamicofstream.cpp Dynamicofstream.h \
	Fcontrol.cpp Fcontrol.h \
	gzstream.C gzstream.h \
	IOUtil.h \
	Options.cpp Options.h \
	Sequence.cpp Sequence.h \
	SeqEval.h SeqEval.cpp \
	SignalHandler.cpp SignalHandler.h \
	StringUtil.h \
	Uncompress.cpp Uncompress.h
	