noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	BloomFilterInfo.cpp BloomFilterInfo.h \
	Dynamicofstream.cpp Dynamicofstream.h \
	gzstream.C gzstream.h \
	Options.cpp Options.h \
	SeqEval.h \
	kseq.h kseq_util.h \
	concurrentqueue.h \
	StringUtil.h \
	kalloc.h kdq.h kvec.h sdust.c sdust.h SDust.hpp \
	sntHashIterator.hpp
	